# v3.1:
  * Make .rurienv immutable.
  * Drop CapAmb && Clear CapInh.
  * Add cgroup support for cpuset and memory.
  * Add `-l` option: `--limit`.
  * error() when the command run failed in continer.
# v3.0:
  * Remove daemon support.
  * Use libk2v for config files and .rurienv file.
  * Remove old `-d` `-D` `-K` `-l` `-t` `-T` option.
  * Add long args support.
  * `-d` option now aliases to `--drop`.
  * `-D` option now aliases to `--dump-config`.
  * Add `-o` option: `--output` for `-D`.
  * Add `-N` option: `--no-rurienv`.
  * Add `-R` option: `--read-only`.
  * Add `-M` option: `--ro-mount`.
  * Automatically unset $LD_PRELOAD before running container(Maybe will not work).
  * Fix `-U` option might also umount other mountpoints on host.
  * General bug fixes.
# v2.7:
  * Catch segfault.
  * Fix default mountpoint.
  * Fix path_is_absolute(p) failed.
  * Remove ASAN in Makefile.
  * General bug fixes.
# v2.6:
  * Fix uid_map and gid_map for `-r` option.
  * Auto detect mountpoint type for `-m` option.
  * Remove manpage && update README.md.
  * General bug fixes.
# v2.5-hotfix2:
  * Fix default caplist caused `could not change the root directory` and `Failed to check chroot()`
# v2.5:
  * Add binfmt_misc support.
  * Add `-a` option: Simulate architecture via binfmt_misc & QEMU.
  * Add `-q` option: Specify the path of QEMU.
  * Add `-S` option: Bind-mount /dev/, /sys/ and /proc/ from host.
  * General bug fixes.
# v2.4:
  * Add `-r` option: run rootless container.
  * Add an easter egg: `ruri AwA`.
  * Rewrite Makefile, you can `make -j$(nproc)` now.
  * General bug fixes.
# v2.3:
  * `-hh` => `-H`.
  * Add `-T` option.
  * Change src structure.
  * Rewrite most of the code.
  * General bug fixes.
# v2.2:
  * Add new security options of Clang/GCC.
  * Disable no_new_privs bit by default for seccomp.
  * Disallow raising ambient capabilities via the prctl(2) PR_CAP_AMBIENT_RAISE operation.
  * Protect /sys/block by mounting a tmpfs on it.